css/style.css
:root {
	--achromatic: 0, 0%;
	/* neutral color */
	--bg-color: hsl(var(--achromatic), 96%);
	--overlay-bg: hsl(var(--achromatic), 100%);
	--font-color: hsl(var(--achromatic), 20%);
	--shadow: hsl(var(--achromatic), 70%);
	--shadow-subtle: hsl(var(--achromatic), 90%);

	--accent-color: hsl(200, 50%, 55%);

	--spacing: 3vw;
	--rounded-corners: 5px;
}

* {
	box-sizing: border-box;
}

html {
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
	margin: 0;
	padding: 0;
	background: url("../svg/circuit-board.svg"), var(--bg-color);
	background-size: 200px, cover;
}

body {
	margin: var(--spacing);
	color: var(--font-color);
	font-family: 'Dosis', sans-serif;
	font-size: 100%;
	background-color: var(--bg-color);
	border-radius: 5px;
}

ul,
h1,
h2,
h3,
p {
	margin: 0;
	padding: 0;
}

/*
-------------------------------------------------------------------
HEADER
-------------------------------------------------------------------
*/

header {
	width: 100%;
	padding: var(--spacing);
	background-color: var(--overlay-bg);
	display: flex;
	justify-content: space-between;
	box-shadow: 0 0px 15px var(--shadow);
	border-radius: var(--rounded-corners) var(--rounded-corners) 0 0;
	/*position: sticky;
	top: 0;*/
}

h1 {
	font-size: 5rem;
	text-transform: uppercase;
	line-height: 100%;
	margin-bottom: 1rem;
}

h2 {
	font-size: 2rem;
	margin-bottom: 1rem;
}

header ul {
	list-style-type: none;
	display: flex;
	gap: 20px;
}

header ul img {
	width: 50px;
	filter: invert(20%) brightness(100%);
}

header p img {
	width: 30px;
	margin-right: 10px;
	filter: invert(20%) brightness(100%);
}

header p {
	font-size: 1.4rem;
	margin-bottom: 1rem;
}

#profile-pic {
	border: 5px solid hsl(var(--achromatic), 95%);
	width: 280px;
	height: 280px;
	border-radius: 50%;
	overflow: hidden;
	flex-shrink: 0;
}

#profile-pic img {
	transition: transform 0.5s ease;
	width: 280px;
	height: 280px;
}

#profile-pic img:hover {
	transform: scale(1.2);
}


/*
-------------------------------------------------------------------
SECTION
-------------------------------------------------------------------
*/

section {
	padding: var(--spacing);
}

section+section {
	padding-top: 0;
}

h3 {
	flex: 1 0 100%;
	background-color: var(--bg-color);
	font-size: 1.5rem;
	padding-bottom: 1rem;
	text-transform: uppercase;
	position: sticky;
	top: 0;
}

section>div {
	width: 100%;
	padding: 15px;
	margin-bottom: 15px;
	background-color: var(--overlay-bg);
	box-shadow: 0 2px 2px var(--shadow-subtle);
	font-size: 1.2rem;
	display: flex;
	justify-content: space-between;
	border-radius: var(--rounded-corners);
	border-left: 4px solid var(--accent-color);
	gap: var(--spacing);
	transition: box-shadow 0.3s;
}

section>div:hover {
	box-shadow:0 2px 4px var(--shadow);
}

#language,
#interests {
	display: flex;
	flex-wrap: wrap;
	column-gap: 4%;
}

#language>div {
	--accent-color: hsl(0, 50%, 55%);
	flex: 0 0 22%;
}

#interests>div {
	--accent-color: hsl(60, 50%, 55%);
	flex: 0 0 48%;
}

/*
-------------------------------------------------------------------
FOOTER
-------------------------------------------------------------------
*/

footer {
	width: 100%;
	padding: var(--spacing);
	background-color: hsl(var(--achromatic), 20%);
	color: hsl(var(--achromatic), 90%);
	border-radius: 0 0 var(--rounded-corners) var(--rounded-corners);
}

/*
-------------------------------------------------------------------
MEDIA QUERIES
-------------------------------------------------------------------
*/
@media (prefers-color-scheme: dark) {
	:root {
		--bg-color: hsl(var(--achromatic), 25%);
		--overlay-bg: hsl(var(--achromatic), 35%);
		--font-color: hsl(var(--achromatic), 90%);
		--shadow: hsl(var(--achromatic), 10%);
		--shadow-subtle: hsl(var(--achromatic), 20%);

		--accent-color: hsl(200, 50%, 55%);
	}

	header .infos img {
		filter: invert(0.9);
	}
}

@media only screen and (max-width: 450px) and (orientation: portrait) {
	:root {
		--spacing: 4.5vw;
	}

	header {
		flex-direction: column-reverse;
	}

	header>img {
		margin: 0 auto;
	}

	h1 {
		font-size: 3.2rem;
		margin-top: 1rem;
	}

	section>div {
		flex-direction: column-reverse;
	}

	#language>div {
		flex: 0 0 48%;
	}
}

@media print {
	:root {
		--spacing: 1vw;
	}

	html,
	body,
	header,
	h3 {
		background: initial;
		box-shadow: initial;
	}

	h1 {
		font-size: 28pt;
		margin-bottom: 4mm;
	}

	h2 {
		font-size: 20pt;
		margin-bottom: 4mm;
	}

	h3 {
		font-size: 18pt;
		padding-bottom: 4mm;
	}

	header p {
		font-size: 14pt;
		padding-bottom: 0mm;
	}

	header p::before {
		content: "Starkenburgring 55, ";
	}

	header ul {
		display: initial;
	}

	#profile-pic {
		width: 6cm;
		height: 6cm;
	}
	
	#profile-pic img {
		width: 6cm;
		height: 6cm;
		transform: scale(1.2);
	}

	header p img {
		display: none;
	}

	header li img {
		width: 8mm;
		height: 8mm;
		vertical-align:middle;
	}

	header li:not(:last-child) {
		margin-bottom: 2mm;
	}

	header a:after {
		content: " " attr(href);
	}

	header a:link, header a:active, header a:visited {
		text-decoration: none;
		color: initial;
	}

	section>div {
		padding: 2mm;
		margin-bottom: 2mm;
		box-shadow: initial;
		font-size: 12pt;
		border-radius: var(--rounded-corners);
		border-left: 4px solid var(--accent-color);
		background-color: hsl(0, 0%, 95%);
	}

	footer {
		display: none;
	}
}

